--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,7 +5,7 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 2.5em;
+  margin-top: 1.5em;
   padding-left: 1.5em;
   padding-right: 1.5em;
   animation: fadeInUp 0.6s cubic-bezier(0.4, 0, 0.2, 1) both;
