--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -78,8 +78,9 @@
   width: 36px;
 
   @include breakpoint($large) {
-    display: block;
-    width: auto;
+    display: flex;
+    justify-content: center;
+    width: 100%;
     height: auto;
     text-align: center;
     margin-bottom: 1rem;
